<resources>
    <string name="app_name">Dieu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_food_category">Food Category</string>
    <string name="title_activity_food">food</string>
    <string name="Fun_Category">Fun</string>
    <string name="Personal_Category">Personal</string>
    <string name="Activities_Category">Activities</string>
    <string name="Favorites_Category">Favorites</string>
    <string name="Food_Category">Food</string>
    <string name="Emotions_Category">Emotions</string>
    <string name="title_activity_funcategory">funcategory</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="video_list_title">GarMaNarNar</string>
</resources>
