<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#C390D4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:layout_width="550dp"
        android:layout_height="175dp"
        android:text="@string/Food_Category"
        android:id="@+id/topLeftButton"
        android:enabled="true"
        android:clickable="true"
        android:textSize="20sp"
        android:longClickable="false"
        android:elegantTextHeight="false"
        android:singleLine="false"
        android:onClick="simpleClick"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="false"
        android:layout_marginLeft="15dp"
        android:background="@drawable/button_food_category" />

    <Button
        android:layout_width="550dp"
        android:layout_height="175dp"
        android:text="@string/Personal_Category"
        android:id="@+id/midLeftButton"
        android:layout_below="@+id/topLeftButton"
        android:layout_alignParentStart="false"
        android:enabled="true"
        android:height="175dp"
        android:width="550dp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:clickable="true"
        android:layout_alignParentTop="false"
        android:onClick="simpleClick"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:contextClickable="false"
        android:elegantTextHeight="true"
        android:background="@drawable/button_personal_category" />

    <Button
        android:layout_width="550dp"
        android:layout_height="175dp"
        android:text="@string/Emotions_Category"
        android:id="@+id/botLeftButton"
        android:enabled="true"
        android:height="175dp"
        android:width="550dp"
        android:textSize="20sp"
        android:clickable="true"
        android:layout_below="@+id/midLeftButton"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:onClick="simpleClick"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_emotions_category" />

    <Button
        android:layout_width="550dp"
        android:layout_height="175dp"
        android:text="@string/Activities_Category"
        android:id="@+id/topRightButton"
        android:height="175dp"
        android:width="550dp"
        android:enabled="true"
        android:clickable="true"
        android:textSize="20sp"
        android:longClickable="false"
        android:elegantTextHeight="false"
        android:singleLine="false"
        android:onClick="simpleClick"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_activities_category" />

    <Button
        android:layout_width="550dp"
        android:layout_height="175dp"
        android:text="@string/Fun_Category"
        android:id="@+id/midRightButton"
        android:height="175dp"
        android:width="550dp"
        android:enabled="true"
        android:clickable="true"
        android:textSize="20sp"
        android:longClickable="false"
        android:elegantTextHeight="false"
        android:singleLine="false"
        android:layout_below="@+id/topRightButton"
        android:onClick="simpleClick"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_fun_category" />

    <Button
        android:layout_width="550dp"
        android:layout_height="175dp"
        android:text="@string/Favorites_Category"
        android:id="@+id/botRightButton"
        android:height="175dp"
        android:width="550dp"
        android:enabled="true"
        android:clickable="true"
        android:textSize="20sp"
        android:longClickable="false"
        android:elegantTextHeight="false"
        android:singleLine="false"
        android:layout_below="@+id/midRightButton"
        android:onClick="simpleClick"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_favorites_category" />

    <Button
        android:layout_width="450dp"
        android:layout_height="100dp"
        android:text="Yes"
        android:id="@+id/yesButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:enabled="true"
        android:clickable="true"
        android:width="550dp"
        android:height="75dp"
        android:textSize="50dp"
        android:onClick="simpleClick"
        android:layout_marginLeft="110dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_yes" />

    <Button
        android:layout_width="450dp"
        android:layout_height="100dp"
        android:text="No"
        android:id="@+id/noButton"
        android:enabled="true"
        android:clickable="true"
        android:width="550dp"
        android:height="75dp"
        android:textSize="50dp"
        android:layout_alignParentEnd="false"
        android:onClick="simpleClick"
        android:layout_alignParentRight="true"
        android:layout_marginRight="110dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_no" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/attentionButton"
        android:onClick="attentionClick"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="attention button"
        android:clickable="true"
        android:nestedScrollingEnabled="false"
        android:background="@drawable/button_attention" />

</RelativeLayout>
